--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "express": "^5.1.0",
     "puppeteer": "^24.9.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
